--- a/feature-staking-impl/src/main/res/layout/fragment_start_change_validators.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_start_change_validators.xml
@@ -22,8 +22,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/bg_advertisement_blue"
         app:action="@string/common_continue"
+        app:advertisementCardBackground="@drawable/ic_banner_blue_gradient"
         app:image="@drawable/advertisement_star"
         app:learnMore="@string/common_how_it_works"
         app:subtitle="@string/staking_start_change_validators_recommended_subtitle"
