--- a/feature-staking-impl/src/main/res/layout/fragment_set_controller_account.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_set_controller_account.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/confirmSetControllerContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/confirmSetControllerContainer"
     android:orientation="vertical"
     tools:background="@color/secondary_screen_background">
 
@@ -30,11 +30,11 @@
             android:paddingEnd="16dp">
 
             <io.novafoundation.nova.common.view.AdvertisementCard
+                android:id="@+id/setControllerAdvertisement"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:id="@+id/setControllerAdvertisement"
-                android:background="@drawable/bg_advertisement_grey"
+                app:advertisementCardBackground="@drawable/ic_banner_grey_gradient"
                 app:image="@drawable/shield"
                 app:learnMore="@string/common_find_out_more"
                 app:subtitle="@string/staking_set_controller_subtitle"
@@ -53,16 +53,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:textColor="@color/text_primary"
-                android:text="@string/staking_stash" />
+                android:text="@string/staking_stash"
+                android:textColor="@color/text_primary" />
 
             <TextView
                 style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:textColor="@color/text_secondary"
-                android:text="@string/staking_stash_can_hint_v2_2_0" />
+                android:text="@string/staking_stash_can_hint_v2_2_0"
+                android:textColor="@color/text_secondary" />
 
             <io.novafoundation.nova.feature_account_api.view.AccountView
                 android:id="@+id/setControllerStash"
@@ -76,16 +76,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:textColor="@color/text_primary"
-                android:text="@string/staking_controller" />
+                android:text="@string/staking_controller"
+                android:textColor="@color/text_primary" />
 
             <TextView
                 style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:textColor="@color/text_secondary"
-                android:text="@string/staking_controller_can_hint_v2_2_0" />
+                android:text="@string/staking_controller_can_hint_v2_2_0"
+                android:textColor="@color/text_secondary" />
 
             <io.novafoundation.nova.feature_account_api.view.AccountView
                 android:id="@+id/setControllerController"
@@ -102,7 +102,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:visibility="gone"
-        android:text="@string/common_continue" />
+        android:text="@string/common_continue"
+        android:visibility="gone" />
 
 </LinearLayout>
