--- a/feature-governance-impl/src/main/res/layout/fragment_delegate_details.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_delegate_details.xml
@@ -18,10 +18,12 @@
         android:id="@+id/delegateDetailsContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:visibility="visible"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <ScrollView
+            android:paddingBottom="68dp"
+            android:clipToPadding="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -85,14 +87,22 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/delegateDetailsDescription" />
 
+                <Space
+                    android:id="@+id/delegateDetailsDescriptionMetadataBottomSpacing"
+                    android:layout_width="0dp"
+                    android:layout_height="12dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/delegateDetailsDescriptionReadMore" />
+
                 <io.novafoundation.nova.feature_account_api.view.AccountView
                     android:id="@+id/delegateDetailsAccount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="12dp"
                     app:actionIcon="@drawable/ic_more_horizontal"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/delegateDetailsDescriptionReadMore" />
+                    app:layout_constraintTop_toBottomOf="@id/delegateDetailsDescriptionMetadataBottomSpacing" />
 
                 <io.novafoundation.nova.common.view.TableView
                     android:id="@+id/delegateDetailsStats"
@@ -135,6 +145,8 @@
                 <io.novafoundation.nova.feature_account_api.presenatation.mixin.identity.IdentityView
                     android:id="@+id/delegateDetailsIdentity"
                     android:layout_width="match_parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="16dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@id/delegateDetailsStats" />
@@ -143,7 +155,7 @@
                     android:id="@+id/delegateDetailsMetadataGroup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:constraint_referenced_ids="delegateDetailsIcon,delegateDetailsTitle,delegateDetailsType,delegateDetailsDescription,delegateDetailsDescriptionReadMore" />
+                    app:constraint_referenced_ids="delegateDetailsIcon,delegateDetailsTitle,delegateDetailsType,delegateDetailsDescription,delegateDetailsDescriptionReadMore, delegateDetailsDescriptionMetadataBottomSpacing" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
