--- a/app/src/main/res/navigation/delegation_nav_graph.xml
+++ b/app/src/main/res/navigation/delegation_nav_graph.xml
@@ -33,6 +33,14 @@
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_delegateDetailsFragment_to_delegateFullDescription"
+            app:destination="@id/delegateFullDescription" />
     </fragment>
 
     <fragment
@@ -41,4 +49,9 @@
         android:label="VotedReferendaFragment"
         tools:layout="@layout/fragment_voted_referenda" />
 
+    <fragment
+        android:id="@+id/delegateFullDescription"
+        android:name="io.novafoundation.nova.feature_governance_impl.presentation.common.description.DescriptionFragment"
+        android:label="ReferendumDescriptionFragment"
+        tools:layout="@layout/fragment_description" />
 </navigation>
