--- a/app/src/main/res/navigation/referendum_details_graph.xml
+++ b/app/src/main/res/navigation/referendum_details_graph.xml
@@ -60,9 +60,9 @@
 
     <fragment
         android:id="@+id/referendumDescription"
-        android:name="io.novafoundation.nova.feature_governance_impl.presentation.referenda.description.ReferendumDescriptionFragment"
+        android:name="io.novafoundation.nova.feature_governance_impl.presentation.common.description.DescriptionFragment"
         android:label="ReferendumDescriptionFragment"
-        tools:layout="@layout/fragment_referendum_description" />
+        tools:layout="@layout/fragment_description" />
 
     <fragment
         android:id="@+id/setupVoteReferendumFragment"
