Feature/delegation header (#714)
* Implemented delegation banner

* Minor changes

* Fixed pr notes

* Move filtering and sorting to adapter. Fix code review notes

* improved the banners

* Minor changes

--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -149,8 +149,10 @@
         <attr name="title" />
         <attr name="subtitle" />
         <attr name="image" />
+        <attr name="advertisementCardBackground" format="color|reference" />
         <attr name="learnMore" format="string" />
         <attr name="action" format="string" />
+        <attr name="showClose" format="boolean"/>
     </declare-styleable>
 
     <declare-styleable name="AlertView">
