--- a/feature-governance-impl/src/main/res/layout/item_referendum_voter.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referendum_voter.xml
@@ -7,19 +7,19 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingHorizontal="16dp"
-    tools:background="@color/block_background">
+    tools:background="@color/secondary_screen_background">
 
     <io.novafoundation.nova.common.view.AddressView
         android:id="@+id/itemVoterAddress"
         android:layout_width="0dp"
+        android:layout_marginEnd="24dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2" />
+        android:layout_weight="1" />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="5dp"
-        android:layout_weight="3"
         android:orientation="vertical">
 
         <TextView
