--- a/feature-governance-impl/src/main/res/layout/view_chip.xml
+++ b/feature-governance-impl/src/main/res/layout/view_chip.xml
@@ -27,6 +27,7 @@
         android:textColor="@color/chip_text"
         tools:layout_marginEnd="8dp"
         tools:layout_marginVertical="4.5dp"
+        android:includeFontPadding="false"
         tools:style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
         tools:text="main agenda" />
 
