--- a/app/src/main/res/navigation/delegation_nav_graph.xml
+++ b/app/src/main/res/navigation/delegation_nav_graph.xml
@@ -5,7 +5,6 @@
     android:id="@+id/delegation_nav_graph"
     app:startDestination="@id/delegateListFragment">
 
-
     <fragment
         android:id="@+id/delegateListFragment"
         android:name="io.novafoundation.nova.feature_governance_impl.presentation.delegation.delegate.list.DelegateListFragment"
@@ -35,12 +34,20 @@
             app:popExitAnim="@anim/fragment_close_exit" />
 
         <action
+            android:id="@+id/action_delegateDetailsFragment_to_delegateFullDescription"
+            app:destination="@id/delegateFullDescription"
             app:enterAnim="@anim/fragment_open_enter"
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit"
-            android:id="@+id/action_delegateDetailsFragment_to_delegateFullDescription"
-            app:destination="@id/delegateFullDescription" />
+            app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
+            android:id="@+id/action_delegateDetailsFragment_to_selectDelegationTracks"
+            app:destination="@id/selectDelegationTracks"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
     </fragment>
 
     <fragment
@@ -52,6 +59,12 @@
     <fragment
         android:id="@+id/delegateFullDescription"
         android:name="io.novafoundation.nova.feature_governance_impl.presentation.common.description.DescriptionFragment"
-        android:label="ReferendumDescriptionFragment"
+        android:label="DescriptionFragment"
         tools:layout="@layout/fragment_description" />
+
+    <fragment
+        android:id="@+id/selectDelegationTracks"
+        android:name="io.novafoundation.nova.feature_governance_impl.presentation.delegation.delegate.tracks.select.SelectDelegationTracksFragment"
+        android:label="SelectDelegationTracksFragment"
+        tools:layout="@layout/fragment_select_delegation_tracks" />
 </navigation>
