--- a/feature-governance-impl/src/main/res/layout/fragment_delegate_details.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_delegate_details.xml
@@ -160,6 +160,7 @@
         </ScrollView>
 
         <io.novafoundation.nova.common.view.PrimaryButton
+            android:id="@+id/delegateDetailsAddDelegation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
